<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".act_framelayout">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/img"
        android:scaleType="center"/>

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/baseline_arrow_forward_ios_24"
        android:layout_gravity="center|right"
        />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center|left"
        app:srcCompat="@drawable/baseline_arrow_back_ios_24" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/HSR"
        android:layout_gravity="top|center"
        android:textSize="50px"
        android:textColor="#FFFFFF"
        />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/img_1"
        android:layout_gravity="top|left"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/HSRName"
        android:textSize="50px"
        android:layout_gravity="top|center"
        android:layout_marginTop="100px"
        android:textColor="#FFFFFF"
        />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnName"
        android:layout_gravity="bottom|center"
        android:backgroundTint="#Fd1eb2"
        android:textSize="90px"
        />

</FrameLayout>