<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".act_linear_layout"
    android:gravity="center"
    >

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/img_logo"
        android:layout_marginBottom="60dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="3"
            android:text="Button"
            android:backgroundTint="#66BB6A"
            />

        <Button
            android:id="@+id/button14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="Button"
            android:textColor="@color/black"
            android:backgroundTint="#FFEB3B"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        >

        <Button
            android:id="@+id/button18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnlinear3"
            android:layout_margin="10dp"
            android:layout_gravity="top|center"
            />

        <Button
            android:id="@+id/button19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnlinear1"
            android:layout_gravity="center|right"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/button20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnlinear2"
            android:layout_gravity="center|left"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            app:srcCompat="@drawable/baseline_arrow_back_ios_24"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:contentDescription="null"
            />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textlinear"
            android:layout_gravity="center"
            android:layout_margin="40dp"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:textAlignment="center"
            />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            app:srcCompat="@drawable/baseline_arrow_forward_ios_24"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:contentDescription="null"
            />

    </LinearLayout>

</LinearLayout>